# ecs-tiny

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test.rs
