[package]
name = "ecs-tiny"
version = "0.3.0"
authors = ["GossiperLoturot"]
edition = "2021"
description = "A minimal ECS supporting entity and component insertion/removal, association, and single-type iteration."
readme = "README.md"
repository = "https://github.com/GossiperLoturot/ecs-tiny"
license = "MIT"
keywords = ["game", "ecs"]
categories = ["data-structures", "game-engines", "game-development"]

[dependencies]
ahash = "0.8"
slab = "0.4"
stack-any = "0.1"
